<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre_mascota">Catty</string>
    <string name="rating_mascota">5</string>
    <string name="rating">Rating</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_configurar_cuenta">Configurar Cuenta</string>
    <string name="favoritos">Favoritos</string>
    <string name="contact">Contacto</string>
    <string name="mail_from">From:</string>
    <string name="mail_subject">Subject</string>
    <string name="mail_message">Message</string>
    <string name="mail_send">Enviar</string>
    <string name="sin_perfil">Configurar perfil</string>

    <!-- Email strings -->
    <string name="email_sent">Correo enviado.</string>
    <string name="email_fail_sent">Falló el envio del correo.</string>
    <string name="bad_account">Datos incorrectos de email.</string>
    <string name="auth_fail">Falló la autenticación de correo.</string>
    <string name="email_fail">Falló el correo.</string>
    <string name="unexpected_error">Ocurrió un error inesperado.</string>
    <string name="escribe_usuario">Escribe tu usuario</string>
    <string name="recibir_notificaciones">Recibir Notificaciones</string>

</resources>
