<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mContacto"
        android:title="@string/contact"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/mAbout"
        android:title="@string/menu_about"
        android:orderInCategory="101"
        />
    <item
        android:id="@+id/mConfig"
        android:title="@string/menu_configurar_cuenta"
        android:orderInCategory="102"
        />
    <item
        android:id="@+id/mNotif"
        android:title="@string/recibir_notificaciones"
        android:orderInCategory="103"
        />
    <item
        android:id="@+id/mFav"
        android:title="@string/favoritos"
        android:orderInCategory="104"
        app:showAsAction="always"
        android:icon="@drawable/ic_5_star_hotel"
        />

</menu>