<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/cvMascota"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imgFotoCV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/cat_96"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nombre_mascota" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/tvNombreMascotaCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_mascota"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:padding="15dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/tvRatingMascotaCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_mascota"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:layout_marginRight="@dimen/margin_text_cardview"
                    />

                <ImageView
                    android:id="@+id/imgRatingMascotaCV"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_dog_bone_color"
                    android:contentDescription="@string/rating" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
